--- a/cocos2dx-app/DoomWar/Data/UIPVE/UIPVE.xml.ui
+++ b/cocos2dx-app/DoomWar/Data/UIPVE/UIPVE.xml.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <ProjectDir>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE</ProjectDir>
-  <Version>1.5.0.1</Version>
+  <Version>1.6.0.0</Version>
   <Resources>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\Resources</Resources>
   <Name>UIPVE</Name>
   <JsonFileName>UIPVE.json</JsonFileName>
@@ -19,9 +19,7 @@
   <imageFileList>
     <string>UIPVE0.plist</string>
   </imageFileList>
-  <imagePngList>
-    <string>UIPVE0.png</string>
-  </imagePngList>
+  <imagePngList />
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>UIPVE_1.json</CurrentUIJson>
 </UIProject>
