--- a/cocos2dx-app/DoomWar/Data/UIPVE/UIPVE.xml.ui
+++ b/cocos2dx-app/DoomWar/Data/UIPVE/UIPVE.xml.ui
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <ProjectDir>D:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE</ProjectDir>
+  <ProjectDir>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE</ProjectDir>
   <Version>1.6.0.0</Version>
-  <Resources>D:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\Resources</Resources>
+  <Resources>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\Resources</Resources>
   <Name>UIPVE</Name>
   <JsonFileName>UIPVE.json</JsonFileName>
-  <JsonFolder>D:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\Json</JsonFolder>
+  <JsonFolder>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\Json</JsonFolder>
   <JsonList>
     <string>UIPVE_1.json</string>
   </JsonList>
@@ -13,15 +13,13 @@
     <Width>640</Width>
     <Height>960</Height>
   </CanvasSize>
-  <filePath>D:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\UIPVE.xml.ui</filePath>
+  <filePath>E:\physwf-c-lab\cocos2dx-app\DoomWar\Data\UIPVE\UIPVE.xml.ui</filePath>
   <ProjectType>UIProject</ProjectType>
   <ResRelativePath />
   <imageFileList>
     <string>UIPVE0.plist</string>
   </imageFileList>
-  <imagePngList>
-    <string>UIPVE0.png</string>
-  </imagePngList>
+  <imagePngList />
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>UIPVE_1.json</CurrentUIJson>
 </UIProject>
